# stewart_mujoco

./: README.md  stewart.xml
meshes/: TOP_1.stl  UJ1_1.stl  UJ2_1.stl  UJ3_1.stl  UJ4_1.stl  UJ5_1.stl  UJ6_1.stl  X1bottom_1.stl  X1top_1.stl  X2bottom_1.stl  X2top_1.stl  X3bottom_1.stl  X3top_1.stl  X4bottom_1.stl  X4top_1.stl  X5bottom_1.stl  X5top_1.stl  X6bottom_1.stl  X6top_1.stl  base_link.stl  cylinder1_1.stl  cylinder2_1.stl  cylinder3_1.stl  cylinder4_1.stl  cylinder5_1.stl  cylinder6_1.stl  piston1_1.stl  piston2_1.stl  piston3_1.stl  piston4_1.stl  piston5_1.stl  piston6_1.stl  rod1_1.stl  rod2_1.stl  rod3_1.stl  rod4_1.stl  rod5_1.stl  rod6_1.stl  stewart.urdf
src/: UDP_interface.py  control_loop.py  controller.py  main_logic.py  mujoco_interface.py  recorder.py
src/inverse_kinematics/: CMakeLists.txt  config_arm.h  mldivide.cpp  mldivide.h  rtwtypes.h  stewart_ik.cpp  stewart_ik.py  test_c.py
